--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "eslint.enable": false
+  "eslint.enable": false,
+  "editor.tabSize": 2,
+  "html.format.enable": true,
+  "editor.formatOnSave": true
 }
